# graphloop-backend

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
resources/: system_prompt.md
resources/gumcp_docs/: gumcp_gmail_docs.txt  gumcp_gsheets_docs.txt  gumcp_list.txt
scripts/: generate_gumcp_docs.py
src/: agent.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  document_loader.py  model_config.py  sandbox.py
src/tools/: __init__.py  code_executor.py
